<resources>
    <string name="app_name">UAS AKB IF-2 10119076</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Profile</string>
    <string name="menu_gallery">Catatan Harian</string>
    <string name="menu_slideshow">Informasi Aplikasi</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="judul1">Pembuat</string>
    <string name="judul2">Maksud dan Tujuan Aplikasi</string>
    <string name="judul3">Informasi Aplikasi</string>

    <string name="desk_1">Dibuat Oleh Sulthon Naufal Akmal</string>
    <string name="desk_2">Aplikasi ini berjutuan untuk memenuhi tugas UAS AKB IF2</string>
    <string name="desk_3">Dalam Aplikasi ini tedapat Splash Screen, Navigation Drawer, Mdapat menambah catatan dan login</string>
    <string name="nomor">Nomor</string>
    <string name="tanggal">Tanggal</string>
    <string name="judul">Judul</string>
    <string name="kategori">Kategori</string>
    <string name="kembali">Kembali</string>
    <string name="simpan">Simpan</string>
    <string name="isi_catatan">Isi Catatan</string>
</resources>